@@ -1,0 +1,5 @@
+
+themedir= @IMHANGUL_STATUS_THEMES_DIR@/MSWindowsXP
+theme_DATA = none.png hangul.png english.png
+
+EXTRA_DIST = $(theme_DATA)
