@@ -1,6 +1,7 @@
 SUBDIRS = \
 	SimplyRed \
 	MSWindows \
+	MSWindowsXP \
 	Mac \
 	keyboard \
 	Onion \
