@@ -1,3 +1,7 @@
+2004-03-07  Choe Hwanjin <krisna@kldp.org>
+	* src/imhangul_status.c: remove type-punned pointer warning
+	* 새로운 테마 추가: MSWindowXP
+
 2003-10-30  Choe Hwanjin <krisna@kldp.org>
 	* Release 0.3
 
